Fix Google and Lucky button stretching

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ a:hover, a:active {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 110px;
+  margin-top: 100px;
 }
 
 .searcharea {
@@ -89,18 +89,20 @@ a:hover, a:active {
 
 .but {
   background-color: #eff0f2;
-  padding: 10px 15px 10px 15px;
+  max-height: 50px;
+  padding: 8px 15px 8px 15px;
   border-radius: 4px;
   font-size: 14px;
   border: none;
+  min-width: 124px
 }
 
-.but:hover {
+.search-buttons:hover {
   border-color: black;
-  box-shadow: box-shadow: 0px 0px 3px 10px rgb(93, 93, 93);
+  box-shadow: box-shadow: 5px 5px 3px 10px rgb(93, 93, 93);
 }
 
-.search-buttons {
+.search-buttons{
   display: grid;
   grid-template-columns: 1.5fr .5fr .6fr 1.4fr;
   grid-template-rows: 1fr;
